--- a/package.json
+++ b/package.json
@@ -2,25 +2,18 @@
   "name": "ignite-node-serverless-challenge",
   "version": "1.0.0",
   "description": "The latest Node.JS Ignite challenge made by Rocketseat",
-  "main": "serverless.ts",
   "scripts": {
     "dev": "sls offline",
     "dynamo:start": "sls dynamodb start",
     "deploy": "sls deploy -v"
   },
-  "engines": {
-    "node": ">=14.15.0"
-  },
   "dependencies": {
-    "@middy/core": "^1.5.2",
-    "@middy/http-json-body-parser": "^1.5.2",
-    "source-map-support": "^0.5.19"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
-    "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-ignore": "^0.1.6",
