--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "deploy": "sls deploy -v"
   },
   "dependencies": {
+    "dayjs": "^1.10.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "@types/uuid": "^8.3.1",
     "serverless": "^2.23.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-ignore": "^0.1.6",
