--- a/serverless.yaml
+++ b/serverless.yaml
@@ -34,15 +34,16 @@ functions:
     handler: src/functions/createTodo.handle
     events:
       - http:
-          path: /createTodo/{id}
+          path: /createTodo/{user_id}
           method: POST
           cors: true
-    iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - dynamodb:Query
-          - dynamodb:PutItem
-        Resource: "arn:aws:dynamodb:${self.provider.region}:*:table/todos"
+  listTodosByUser:
+    handler: src/functions/listTodosByUser.handle
+    events:
+      - http:
+          path: /listTodosByUser/{user_id}
+          method: GET
+          cors: true
 
 resources:
   Resources:
